--- a/views/login.ejs
+++ b/views/login.ejs
@@ -77,23 +77,22 @@
         <section class="content link_register">
             <h4 class="content_header">YOUTH CENTRIC DIGITAL ECOSYSTEM</h4>
             <p class="content_text">
-                <strong>GhenGhen Live platform</strong> is a triumvirate and youth-centric digital ecosystem built for
-                creative
-                enthusiasts
-                seeking talent discovery, training, incubation, content production, publicity, audience engagement and
-                market nexus to monetize digital contents in music, movies, fashion, and creative expressions.
+                <strong>GhenGhen platform</strong> is a triumvirate and youth-centric digital ecosystem built for
+                creative enthusiasts seeking talent discovery, training, incubation, content production, publicity,
+                audience engagement and market nexus to monetize digital contents in music, movies, fashion, and
+                creative expressions.
             </p>
-            <div class="youtube">
+            <!-- <div class="youtube">
                 <img src="/assest/OLIVE/ladyYoutube.png" alt="" srcset="">
                 <img class="youtubelogo" src="/assest/OLIVE/fontisto_youtube-play.png">
-            </div>
+            </div> -->
 
             <b style="margin-top: 10px;" class="content_header register_link_header">SIGN IN TO GhenGhen Live </b>
             <form style="margin-bottom: 20px;" class="register_link" id="form">
                 <div class="number">
-                    <label for="number">Please enter your phone number</label>
+                    <!-- <label for="number">Please enter your phone number</label> -->
                     <!-- <input type="number" name="username" required> -->
-                    <input id="phone" name="username" type="tel">
+                    <input id="phone" name="username" type="tel" placeholder="enter your phone number">
 
                     <img src="/assest/OLIVE/Line 2.png" alt="">
                 </div>
@@ -108,10 +107,10 @@
                     <img src="/assest/OLIVE/Line 2.png" alt="" required>
                 </div> -->
                 <div class="number">
-                    <label for="password">Password</label>
+                    <!-- <label for="password">Password</label> -->
                     <div style="display: flex; gap: 10px;margin-left: 5px;">
                         <img src="/assest/OLIVE/lock.png" alt="" srcset="">
-                        <input type="password" id="password" required name="password">
+                        <input type="password" id="password" required name="password" placeholder="password">
                     </div>
                     <img src="/assest/OLIVE/Line 2.png" alt="">
                 </div>
@@ -128,8 +127,8 @@
                 <button class="btn" id="submitBtn" type="submit">SIGN IN</button>
             </form>
 
-            <a style="color: #801315;" class="register" href="/">Register on GhenGhen Live NOW</a>
-            <p>or <span>LOG IN</span> with </p>
+            <a style="color: goldenrod;" class="register" href="/signup">Register on GhenGhen NOW</a>
+            <p style="color: goldenrod;">or <span>LOG IN</span> with </p>
 
             <!-- <div class="otp_content">
                 <form id="otp">
