--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -17,6 +17,7 @@
             </h1>
             <h5>Member since
             </h5>
+            <h3>✑</h3>
             <img id="editBtn" src="/assest/OLIVE/edit.png" width="30px" height="30px" alt="" srcset="">
 
         </div>
@@ -55,8 +56,8 @@
             </form>
         </div>
 
-        <section style="background-color: #fff;">
-            <h4 style="text-align: center;"> <a style="color: #801315;" href="/logout">logout</a></h4>
+        <section>
+            <h4 style="text-align: center;"> <a style="color: #ddd;" href="/logout">logout</a></h4>
             <br>
 
         </section>
