--- a/views/provider/partials/header.ejs
+++ b/views/provider/partials/header.ejs
@@ -341,6 +341,12 @@
                             <span>Profile</span>
                         </a>
                     </li>
+                    <li>
+                        <a href="/provider/videos">
+                            <i class="material-icons">video_library</i>
+                            <span>videos</span>
+                        </a>
+                    </li>
 
                     <!-- <li class="active">
 
