--- a/views/register.ejs
+++ b/views/register.ejs
@@ -38,30 +38,30 @@
         <b class="content_header register_link_header">JOIN OLIVE FOR FREE </b>
         <form class="register_link" id="register">
             <div class="number">
-                <label for="number">Please enter your phone number</label>
+                <!-- <label for="number">Please enter your phone number</label> -->
                 <!-- <input type="number" name="username" required> -->
                 <input id="phone" name="username" type="tel">
 
                 <img src="/assest/OLIVE/Line 2.png" alt="">
             </div>
             <div class="number">
-                <label for="email">Enter your email address </label>
-                <input type="email" name="email" required>
+                <!-- <label for="email">Enter your email address </label> -->
+                <input type="email" name="email" required placeholder="Enter your email address">
                 <img src="/assest/OLIVE/Line 2.png" alt="">
             </div>
             <div class="number">
-                <label for="name">Enter your full name</label>
-                <input type="text" name="name">
+                <!-- <label for="name">Enter your full name</label> -->
+                <input type="text" name="name" placeholder="Enter your full name">
                 <img src="/assest/OLIVE/Line 2.png" alt="" required>
             </div>
             <div class="number">
-                <label for="password">Password</label>
-                <input type="password" id="password" required name="password">
+                <!-- <label for="password">Password</label> -->
+                <input type="password" id="password" required name="password" placeholder="Password">
                 <img src="/assest/OLIVE/Line 2.png" alt="">
             </div>
             <div class="number">
-                <label for="confirm_password">Confirm password</label>
-                <input type="password" name="" id="confirm_password" required>
+                <!-- <label for="confirm_password">Confirm password</label> -->
+                <input type="password" name="" id="confirm_password" placeholder="Confirm password" required>
                 <img src="/assest/OLIVE/Line 2.png" alt="">
             </div>
             <!-- <div class="number">
@@ -73,8 +73,11 @@
         </form>
 
         <h6 class="resend">
-            <a href="/login" style="color: #801315;">Already a Member Login</a>
+            <a href="/login" style="color: goldenrod;">Already a Member Login</a>
         </h6>
+
+        <p style="color: goldenrod;">or <span>LOG IN</span> with </p>
+
 
         <footer>
             <div class="facebook">
@@ -94,6 +97,18 @@
 
 
     </section>
+    <div class="" style="background-color: #fff;">
+        <div class="footer_social">
+            <div>
+                <p>&copy; 2021 GhenGhen Live</p>
+            </div>
+            <div class="social_icon">
+                <img src="/assest/OLIVE/fb.png" />
+                <img src="/assest/OLIVE/instagram.png" />
+                <img src="/assest/OLIVE/twitter.png" />
+            </div>
+        </div>
+    </div>
 
 
 
@@ -201,10 +216,10 @@
                         // window.location.href = ``;
                         window.location.assign(`/auditionlink/payment/?auditionId=${auditionId}&user=${data.pay.user}`);
                     } else {
-                        alert("registration not complete");
+
                         // continueBtn.style.display = "block";
                         // continueBtn.innerHTML += " with audition";
-                        window.location.assign(`/digitalauditionplatform/${auditionId}`)
+                        window.location.assign(`/auditionlink/success/?auditionId=${auditionId}`)
                     }
                 })
                 .catch(err => console.log(err));
