--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -38,7 +38,7 @@
         </div>
         <!--  -->
     </section>
-    <section class="content" style="background-color: #fff;">
+    <section class="content" style="">
         <h4 class="content_header">My Dashboard</h4>
         <div class="boxs">
             <a href="/digitalauditionplatform">
@@ -61,13 +61,13 @@
                 <img src="/assest/OLIVE/icon/Vector-2.png">
                 <h5>Creative Content Showcase</h5>
             </div>
-            <div class="box">
+            <!-- <div class="box">
                 <a href="/auditions">
                     <img src="/assest/OLIVE/recorder.png">
                     <h5>My Auditions</h5>
 
                 </a>
-            </div>
+            </div> -->
         </div>
         <!-- <h4 class="content_header">YOUTH CENTRIC DIGITAL ECOSYSTEM</h4>
         <p class="content_text">
